src/objects/X3_0_Kasese_Nambale_Beans__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_Dry_Nambale_beans_at_retail_pric__c</fullName>
        <label>A Kg of Dry Nambale beans at retail pric</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_Dry_Nambale_beans_at_wholesale_p__c</fullName>
        <label>A Kg of Dry Nambale beans at wholesale p</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_dry_nambale_beans__c</fullName>
        <label>Name of trader in dry nambale beans</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Kasese__c</fullName>
        <label>3.0 Market Kasese</label>
        <referenceTo>Market_Kasese__c</referenceTo>
        <relationshipLabel>3.0 Kasese Nambale Beans</relationshipLabel>
        <relationshipName>X3_0_Kasese_Nambale_Beans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Kasese Nambale Beans</label>
    <nameField>
        <displayFormat>KN-{0000}</displayFormat>
        <label>3.0 Kasese Nambale Beans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Kasese Nambale Beans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>